--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -187,13 +187,14 @@ RUN sdkmanager \
   "build-tools;25.0.3" \
   "build-tools;26.0.1" \
   "build-tools;26.0.2" \
+	sdkmanager \
   "build-tools;27.0.0" \
   "build-tools;27.0.1" \
   "build-tools;27.0.2" \
   "build-tools;27.0.3" \
-  # 28.0.0 is failing to download from Google for some reason
-  #"build-tools;28.0.0" \
+  "build-tools;28.0.0" \
   "build-tools;28.0.1" \
+	sdkmanager \
   "build-tools;28.0.2" \
   "build-tools;28.0.3" \
   "build-tools;29.0.0" \
