--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -4,7 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM mariadb:10.4.13-bionic
+FROM mariadb:10.5.4-focal
 
 ENV MYSQL_ALLOW_EMPTY_PASSWORD=true \
     MYSQL_DATABASE=circle_test \
