--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -4,13 +4,12 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM mysql:8.0.22
+FROM mysql:8.0.23
 
 ENV MYSQL_ALLOW_EMPTY_PASSWORD=true \
     MYSQL_DATABASE=circle_test \
     MYSQL_HOST=127.0.0.1 \
-    MYSQL_ROOT_HOST=% \
-    MYSQL_USER=root
+    MYSQL_ROOT_HOST=%
 
 # This is the performance optimization tweak to make DB faster
 RUN echo '\n\
